<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/material_grey_300_color_code"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="6dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/logo_text"/>

    <!-- tooltip -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/material_light_blue_300_color_code"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_tooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_header_affinity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_affinity"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spn_affinity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header_affinity"
            android:layout_marginTop="6dp"
            android:drawSelectorOnTop="true"
            android:padding="2dp"
            android:prompt="@string/spinner_default_txt"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_24"/>

        <TextView
            android:id="@+id/tv_header_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spn_affinity"
            android:layout_marginTop="10dp"
            android:text="@string/choose_card_type"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spn_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header_type"
            android:layout_marginTop="6dp"
            android:drawSelectorOnTop="true"
            android:padding="2dp"
            android:prompt="@string/spinner_default_txt"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_24"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- lv -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lv"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <EditText
                    android:id="@+id/edt_lv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="##"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textColor="@color/material_green_500_color_code"
                    android:textColorHint="@color/material_grey_400_color_code"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_max_lv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- asc -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <EditText
                    android:id="@+id/edt_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="#"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="1"
                    android:singleLine="true"
                    android:textColor="@color/material_green_500_color_code"
                    android:textColorHint="@color/material_grey_400_color_code"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_max_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- hp -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>
        </LinearLayout>

        <!-- row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- str -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- spd -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_spd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- wis -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wis"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_wis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>
        </LinearLayout>

        <!-- row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- phy def -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phy_def"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_phy_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- mag def -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_def"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_mag_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <!-- crit % -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>

                <TextView
                    android:id="@+id/tv_crit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_reset_to_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_20"/>

        <Button
            android:id="@+id/btn_regenerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_orange"
            android:gravity="center"
            android:padding="4dp"
            android:layout_gravity="bottom"
            android:text="@string/regenerate"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20"/>

    </LinearLayout>

</LinearLayout>
